Fix generating files again

--- a/themes/openmodelica/layouts/partials/head.html
+++ b/themes/openmodelica/layouts/partials/head.html
@@ -1,19 +1,22 @@
 <title>{{ .Title }}</title>
 <style type="text/css">
+html {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    display: block;
+}
 body {
 	background: #eeeeee;
-	font-size:22px;
 	color: #000000;
 	word-wrap:break-word !important;
 	font-family: 'Open Sans', sans-serif;
+    margin-top: 0px;
 }
 
-h1 {
-	font-size: 40pt;
-}	
-
-h3 {
-	font-size: 20pt;
+#om-logo-h1 {
+    margin: 0;
 }
 
 #nav-container {
