--- a/themes/openmodelica/layouts/partials/header.html
+++ b/themes/openmodelica/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <div id="ja-header" class="wrap">
     <div class="main clearfix">
-        <h1 class="logo">
+        <h1 id="om-logo-h1">
             <a id="om-logo" href="/" title="OpenModelica"><span>OpenModelica</span></a>
         </h1>
    </div>
