Improved mainly the front page
* Added news to frontpage
* Added MODPROD/OM workshop news item
* Added favicon
* Added published/expires text

--- a/themes/openmodelica/layouts/_default/single.html
+++ b/themes/openmodelica/layouts/_default/single.html
@@ -1,4 +1,10 @@
 {{ define "main" }}
 <h1>{{ .Title }}</h1>
+{{ with .PublishDate }}
+<div id="publishDate">Published {{ .Format "2006-01-02" }}</div>
+{{ end }}
+{{ with .ExpiryDate }}
+<div id="publishDate">Expires {{ .Format "2006-01-02" }}</div>
+{{ end }}
 {{ .Content }}
 {{ end }}
