--- a/themes/openmodelica/layouts/index.html
+++ b/themes/openmodelica/layouts/index.html
@@ -1,4 +1,20 @@
 {{ define "main" }}
+<div id="frontpagecolumns">
+
+<div id="maincontent">
 <h1>{{ .Title }}</h1>
 {{ .Content }}
+</div>
+
+<div id="latestnews">
+<div id="latestnewsinternal">
+<h3>Latest news <a href="/tags/news/index.xml"><img class="rss-image" alt="rss feed" src="/images/rss.svg" /></a></h3>
+<ul id="newslist">
+{{ range first 10 (where .Site.Taxonomies.tags.news ".Params.rss_ignore" "!=" true)}}
+  <li class="newsitem">{{ .Page.Date.Format "2006-01-02" }} <a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a></li>
+{{ end }}
+</ul>
+</div>
+</div>
+</div>
 {{ end }}
