--- a/themes/openmodelica/layouts/partials/head.html
+++ b/themes/openmodelica/layouts/partials/head.html
@@ -1,2 +1,3 @@
 <title>{{ .Title }}</title>
 <link rel="stylesheet" href="/css/openmodelica.css">
+<link rel="icon" type="image/x-icon" href="/images/logo-small.svg">
