--- a/themes/openmodelica/static/css/openmodelica.css
+++ b/themes/openmodelica/static/css/openmodelica.css
@@ -13,6 +13,14 @@ body {
     margin-top: 0px;
 }
 
+a:link { text-decoration: none; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: underline; }
+a:active { text-decoration: none; }
+a, a:visited {
+    color: #1B57B1;
+}
+
 #om-logo-h1 {
     margin: 0;
 }
@@ -46,6 +54,10 @@ nav a {
 	font-size:15pt;
 	line-height: 40pt;
 	text-decoration:none;
+}
+
+nav a:visited { 
+    color:#FFF;
 }
 
 nav a:hover { 
