Add more news items, allow external URLs for articles

--- a/themes/openmodelica/layouts/_default/single.html
+++ b/themes/openmodelica/layouts/_default/single.html
@@ -1,10 +1,14 @@
 {{ define "main" }}
 <h1>{{ .Title }}</h1>
 {{ with .PublishDate }}
-<div id="publishDate">Published {{ .Format "2006-01-02" }}</div>
+<div class="publishDate">Published {{ .Format "2006-01-02" }}</div>
 {{ end }}
 {{ with .ExpiryDate }}
-<div id="publishDate">Expires {{ .Format "2006-01-02" }}</div>
+<div class="publishDate">Expires {{ .Format "2006-01-02" }}</div>
 {{ end }}
+{{ with .Params.external_url }}
+Redirecting to <a href="{{ . }}">{{ . }}</a>
+{{ else }}
 {{ .Content }}
+{{ end }}
 {{ end }}
