--- a/themes/openmodelica/layouts/partials/head.html
+++ b/themes/openmodelica/layouts/partials/head.html
@@ -1,3 +1,6 @@
 <title>{{ .Title }}</title>
 <link rel="stylesheet" href="/css/openmodelica.css">
 <link rel="icon" type="image/x-icon" href="/images/logo-small.svg">
+{{ with .Params.external_url }}
+<meta http-equiv="refresh" content="0; URL={{ . }}" />
+{{ end }}
