--- a/themes/openmodelica/layouts/index.html
+++ b/themes/openmodelica/layouts/index.html
@@ -8,10 +8,14 @@
 
 <div id="latestnews">
 <div id="latestnewsinternal">
-<h3>Latest news <a href="/tags/news/index.xml"><img class="rss-image" alt="rss feed" src="/images/rss.svg" /></a></h3>
+<h3>Latest news and events <a href="/tags/news/index.xml"><img class="rss-image" alt="rss feed" src="/images/rss.svg" /></a></h3>
 <ul id="newslist">
-{{ range first 10 (where .Site.Taxonomies.tags.news ".Params.rss_ignore" "!=" true)}}
+{{ range first 20 (where .Site.Taxonomies.tags.news ".Params.rss_ignore" "!=" true)}}
+{{ if (isset .Params "external_url") }}
+  <li class="newsitem">{{ .Page.Date.Format "2006-01-02" }} <a href="{{ .Page.Params.external_url }}">{{ .Page.Title }}</a></li>
+{{ else }}
   <li class="newsitem">{{ .Page.Date.Format "2006-01-02" }} <a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a></li>
+{{ end }}
 {{ end }}
 </ul>
 </div>
