--- a/themes/openmodelica/layouts/partials/header.html
+++ b/themes/openmodelica/layouts/partials/header.html
@@ -17,6 +17,7 @@
                     <li class="item-184"><a href="/home/goal">Goal</a></li>
                     <li class="item-188"><a href="/home/roadmap">Roadmap</a></li>
                     <li class="item-147"><a href="/home/contact-us">Contact us</a></li>
+                    <li><a href="/home/openmodelica-donation">Donate</a></li>
                 </ul>
             </li>
             <li class="item-150 deeper parent"><a href="#">Download</a>
