--- a/themes/openmodelica/layouts/_default/baseof.html
+++ b/themes/openmodelica/layouts/_default/baseof.html
@@ -3,6 +3,7 @@
     {{- partial "head.html" . -}}
     <body>
         {{- partial "header.html" . -}}
+        {{- partial "navbar.html" . -}}
         <div id="content">
         {{- block "main" . }}{{- end }}
         </div>
