--- a/themes/openmodelica/layouts/index.html
+++ b/themes/openmodelica/layouts/index.html
@@ -11,11 +11,13 @@
 <h3>Latest news and events <a href="/tags/news/index.xml"><img class="rss-image" alt="rss feed" src="/images/rss.svg" /></a></h3>
 <ul id="newslist">
 {{ range first 20 (where .Site.Taxonomies.tags.news ".Params.rss_ignore" "!=" true)}}
-{{ if (isset .Params "external_url") }}
-  <li class="newsitem">{{ .Page.Date.Format "2006-01-02" }} <a href="{{ .Page.Params.external_url }}">{{ .Page.Title }}</a></li>
-{{ else }}
-  <li class="newsitem">{{ .Page.Date.Format "2006-01-02" }} <a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a></li>
-{{ end }}
+  <li class="newsitem">{{ .Page.Date.Format "2006-01-02" }}{{ if (isset .Params "conference_end_date") }}–{{ dateFormat "2006-01-02" .Params.conference_end_date }}{{ end }}
+    {{ if (isset .Params "external_url") }}
+    <a href="{{ .Page.Params.external_url }}">{{ .Page.Title }}</a>
+    {{ else }}
+    <a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a>
+    {{ end }}
+  </li>
 {{ end }}
 </ul>
 </div>
