Moved Tools&Apps to Users

--- a/themes/openmodelica/layouts/partials/navbar.html
+++ b/themes/openmodelica/layouts/partials/navbar.html
@@ -19,17 +19,11 @@
                     <li class="item-242"><a href="/download/sourcecodeuser">Source Code</a></li>
                 </ul>
             </li>
-            <li class="item-238 deeper parent"><a href="#">Tools &amp; Apps</a>
-                <ul class="nav-child unstyled small">
-                    <li class="item-190"><a href="/openmodelicaworld/tools">Tools</a></li>
-                    <li class="item-154"><a href="/openmodelicaworld/applications">Applications</a></li>
-                    <li class="item-200"><a href="/openmodelicaworld/related-products">Industrial Products</a></li>
-                </ul>
-            </li>
             <li class="item-236 deeper parent"><a href="#">Users</a>
                 <ul class="nav-child unstyled small">
                     <li class="item-153"><a href="/useresresources/userdocumentation">User Documentation</a></li>
                     <li class="item-237"><a href="/useresresources/modelica-courses">Modelica Courses</a></li>
+                    <li class="item-190"><a href="/useresresources/tools">Tools</a></li>
                     <li class="item-169"><a
                             href="https://github.com/OpenModelica/OpenModelica/blob/master/BUGREPORTING.md">Report
                             Bugs</a></li>
@@ -40,6 +34,8 @@
                             href="https://trac.openmodelica.org/OpenModelica/wiki/WritingCompliantLibraries">Modelica
                             standard
                             compliance</a></li>
+                    <li class="item-154"><a href="/useresresources/applications">Applications</a></li>
+                    <li class="item-200"><a href="/useresresources/related-products">Industrial Products</a></li>
                 </ul>
             </li>
             <li class="item-239 deeper parent"><a href="#">Developers</a>
