--- a/themes/openmodelica/layouts/partials/navbar.html
+++ b/themes/openmodelica/layouts/partials/navbar.html
@@ -123,8 +123,7 @@
                     <li class="item-172"><a href="/research/phd-and-licentiate-theses">PhD and Licentiate theses</a>
                     </li>
                     <li class="item-173"><a href="/research/master-theses">Master Theses</a></li>
-                    <li class="item-227"><a href="/research/recentlycompletedtheses">Recently Completed Theses</a></li>
-                    <li class="item-174"><a href="/research/booksproceedings">Books/Proceedings</a></li>
+                    <li class="item-174"><a href="/research/books">Books</a></li>
                     <li class="item-193"><a href="/research/open-master-theses">Open Master Theses</a></li>
                     <li class="item-197 deeper parent"><a href="/research/omoptim">OMOptim</a>
                         <ul class="nav-child unstyled small">
