Cleaned up old workshops and meetings to a single page

--- a/themes/openmodelica/layouts/partials/navbar.html
+++ b/themes/openmodelica/layouts/partials/navbar.html
@@ -102,17 +102,7 @@
                                     2010</a></li>
                         </ul>
                     </li>
-                    <li class="item-359"><a href="/events/sims-2015">SIMS 2015</a></li>
-                    <li class="item-385"><a href="/events/moses-2016">MOSES-2016</a></li>
-                    <li class="item-406"><a href="/events/eoolt-2017">EOOLT 2017</a></li>
-                    <li class="item-220 deeper parent"><a href="/events/othermeetings">Other Meetings</a>
-                        <ul class="nav-child unstyled small">
-                            <li class="item-222"><a href="/events/othermeetings/ifip-wg24">IFIP WG2.4</a></li>
-                            <li class="item-393"><a
-                                    href="/events/othermeetings/seminarium-av-johan-ehrenberg">Seminarium av Johan
-                                    Ehrenberg</a></li>
-                        </ul>
-                    </li>
+                    <li class="item-220 deeper parent"><a href="/events/othermeetings">Other Events</a></li>
                     <li class="item-183"><a href="/events/contact">Contact</a></li>
                 </ul>
             </li>
@@ -130,11 +120,7 @@
                             <li class="item-207"><a href="/research/omoptim/edop">EDOp</a></li>
                         </ul>
                     </li>
-                    <li class="item-387 deeper parent"><a href="/research/moses">MOSES</a>
-                        <ul class="nav-child unstyled small">
-                            <li class="item-388"><a href="/research/moses/moses-2016">MOSES 2016</a></li>
-                        </ul>
-                    </li>
+                    <li class="item-387 deeper parent"><a href="/research/moses">MOSES</a></li>
                     <li class="item-226"><a href="/research/europrojects">European Projects</a></li>
                 </ul>
             </li>
