--- a/themes/openmodelica/layouts/partials/navbar.html
+++ b/themes/openmodelica/layouts/partials/navbar.html
@@ -115,13 +115,9 @@
                     <li class="item-173"><a href="/research/master-theses">Master Theses</a></li>
                     <li class="item-174"><a href="/research/books">Books</a></li>
                     <li class="item-193"><a href="/research/open-master-theses">Open Master Theses</a></li>
-                    <li class="item-197 deeper parent"><a href="/research/omoptim">OMOptim</a>
-                        <ul class="nav-child unstyled small">
-                            <li class="item-207"><a href="/research/omoptim/edop">EDOp</a></li>
-                        </ul>
-                    </li>
+                    <li class="item-197 deeper parent"><a href="/research/omoptim">OMOptim</a></li>
                     <li class="item-387 deeper parent"><a href="/research/moses">MOSES</a></li>
-                    <li class="item-226"><a href="/research/europrojects">European Projects</a></li>
+                    <li class="item-226"><a href="/research/projects">Projects</a></li>
                 </ul>
             </li>
         </ul>
