Add topbar logotype

--- a/themes/openmodelica/layouts/_default/baseof.html
+++ b/themes/openmodelica/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     <body>
         {{- partial "header.html" . -}}
         {{- partial "navbar.html" . -}}
-        <div id="content">
+        <div class="space-left{{- block "space-right" . }}{{- end }}" id="content">
         {{- block "main" . }}{{- end }}
         </div>
         {{- partial "footer.html" . -}}
