--- a/themes/openmodelica/layouts/partials/header.html
+++ b/themes/openmodelica/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <div id="ja-header" class="wrap">
-    <div class="main clearfix">
-        <a id="om-logo" href="/" title="OpenModelica"><img src="/images/logo.svg" /></a>
+    <div class="main clearfix space-left">
+        <a id="om-logo" href="/" title="OpenModelica"><img src="/images/logo-glow.svg" /></a>
     </div>
 </div>
