--- a/themes/openmodelica/layouts/partials/navbar.html
+++ b/themes/openmodelica/layouts/partials/navbar.html
@@ -1,7 +1,7 @@
 <!-- sidebar start -->
 <div id="nav-container">
     <nav>
-        <ul class="nav menu mod-list">
+        <ul class="nav menu mod-list space-left">
             <li class="item-101 default current active deeper parent"><a href="/">Home</a>
                 <ul class="nav-child unstyled small">
                     {{range where .Site.RegularPages "Section" "home"}}
