--- a/themes/openmodelica/static/css/openmodelica.css
+++ b/themes/openmodelica/static/css/openmodelica.css
@@ -13,6 +13,20 @@ body {
     margin-top: 0px;
 }
 
+h1, h2, h3, h4 {
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+}
+h1 {
+    font-size: 21pt; /* default is 2em=24pt */
+}
+h2 {
+    font-size: 17pt; /* default is 1.5em=18pt */
+}
+h3 {
+    font-size: 13pt; /* default is 1.17em=14pt */
+}
+
 a:link { text-decoration: none; }
 a:visited { text-decoration: none; }
 a:hover { text-decoration: underline; }
@@ -24,7 +38,7 @@ a, a:visited {
 #nav-container {
 	margin: 0 auto;
     width: 100%;
-    text-align: center;
+    text-align: left;
 }
 
 nav {
@@ -96,11 +110,14 @@ nav ul ul ul li {
 li > a:after { content:  ''; }
 li > a:only-child:after { content: ''; }
 
+#ja-header {
+    background-image: url("/images/ice-cooling.jpg");
+    background-size: 100% auto;
+    background-position: center center;
+}
 #om-logo img {
-    display:block;
-    margin: auto;
-    height: 30pt;
-    margin-top: 3pt;
+    display:inline-block;
+    height: 50pt;
 }
 
 #ja-footer {
@@ -121,11 +138,6 @@ figure img {
 figure figcaption {
     text-align: center;
     font-size: 10pt;
-}
-
-h1 {
-    margin-top: 10pt;
-    margin-bottom: 0;
 }
 
 .rss-image {
@@ -237,7 +249,22 @@ dd {
     margin: 0.5em 0 0.5em 0;
 }
     
+.space-left {
+    padding-left: 10pt;
+}
+@media screen and (min-width: 1600px) {
+    .space-left {
+        padding-left: 15%;
+    }
+    .space-right {
+        padding-right: 15%;
+    }
+}
+
 @media screen and (max-width: 800px) {
+  .space-left {
+    padding-left: 0;
+  }
   #maincontent {
     width: 100%;
   }
@@ -265,5 +292,8 @@ dd {
     width:130pt;
 	top:-18pt; 
 	left:-130pt;
+  }
+  #ja-header {
+    background-image: none;
   }
 }
