Change how the layout is handled to not duplicate code

--- a/themes/openmodelica/layouts/_default/list.html
+++ b/themes/openmodelica/layouts/_default/list.html
@@ -1,1 +1,4 @@
-{{- partial "single.html" . -}}
+{{ define "main" }}
+{{- partial "content.html" . -}}
+{{ end }}
+{{ define "space-right" }} space-right{{ end }}
