--- a/themes/openmodelica/layouts/_default/single.html
+++ b/themes/openmodelica/layouts/_default/single.html
@@ -1,57 +1,4 @@
 {{ define "main" }}
-<h1>{{ .Title }}</h1>
-{{ with .PublishDate }}
-<div class="publishDate">Published {{ .Format "2006-01-02" }}</div>
-{{ end }}
-{{ with .ExpiryDate }}
-<div class="publishDate">Expires {{ .Format "2006-01-02" }}</div>
-{{ end }}
-{{ with .Params.external_url }}
-Redirecting to <a href="{{ . }}">{{ . }}</a>
-{{ else }}
-{{ .Content }}
-{{ end }}
-{{ if .Params.donate }}
-<div align="center" id="osdonatestatic"><p>Please consider supporting our efforts.</p>
-<form class="osdonate-form" action="https://www.paypal.com/en/cgi-bin/webscr"
-      method="post" target="paypal">
-    <input type="hidden" name="cmd" value="_donations"/>
-    <input type="hidden" name="business" value="peter.fritzson@liu.se"/>
-    <input type="hidden" name="return" value="{{ .Permalink }}"/>
-    <input type="hidden" name="undefined_quantity" value="0"/>
-    <input type="hidden" name="item_name" value="Donate to OpenModelica"/>
-    Amount:&nbsp;<input type="text" name="amount" size="4" maxlength="10" value="" style="text-align:right;" />
-<select name="currency_code">
-<option value="SEK">SEK</option>
-<option value="USD">USD</option>
-<option value="EUR">EUR</option>
-<option value="GBP">GBP</option>
-<option value="CHF">CHF</option>
-<option value="AUD">AUD</option>
-<option value="HKD">HKD</option>
-<option value="CAD">CAD</option>
-<option value="JPY">JPY</option>
-<option value="NZD">NZD</option>
-<option value="SGD">SGD</option>
-<option value="DKK">DKK</option>
-<option value="PLN">PLN</option>
-<option value="NOK">NOK</option>
-<option value="HUF">HUF</option>
-<option value="CZK">CZK</option>
-<option value="ILS">ILS</option>
-<option value="MXN">MXN</option>
-</select>
-    <input type="hidden" name="rm" value="2"/>
-    <input type="hidden" name="charset" value="utf-8"/>
-    <input type="hidden" name="no_shipping" value="1"/>
-    <input type="hidden" name="image_url" value="{{ .Site.BaseURL }}/images/logo.png"/>
-    <input type="hidden" name="cancel_return" value="{{ .Permalink }}"/>
-    <input type="hidden" name="no_note" value="0"/><br/><br/>
-		<input type="image" src="https://www.paypal.com/en_US/i/btn/btn_donateCC_LG.gif" name="submit" alt="PayPal secure payments." />
-    <!--<input type="image" src="/" name="submit" alt="PayPal secure payments."/>-->
-
-</form>
-</div>
-{{ end }}
+{{- partial "content.html" . -}}
 {{ end }}
 {{ define "space-right" }} space-right{{ end }}
