Improve handling of the licenses/CLA
Read the actual text from the license document instead of copy-paste.
Improved CSS for code listings with line numbers.
Added shortcode for reading file contents

--- a/themes/openmodelica/static/css/openmodelica.css
+++ b/themes/openmodelica/static/css/openmodelica.css
@@ -229,6 +229,11 @@ div.highlight pre {
     padding: 5pt;
 }
 
+div.highlight tr > td pre {
+    white-space: pre;
+    word-break: normal;
+}
+
 dl {
     width: 100%;
     overflow: hidden;
