Update some old Trac links

--- a/themes/openmodelica/layouts/partials/navbar.html
+++ b/themes/openmodelica/layouts/partials/navbar.html
@@ -46,11 +46,8 @@
                     </li>
                     <li class="item-195"><a href="/developersresources/courses">Developers Courses</a></li>
                     <li class="item-157"><a
-                            href="https://github.com/OpenModelica/OpenModelica/blob/master/BUGREPORTING.md">Report
-                            Bugs</a></li>
-                    <li class="item-165"><a href="/developersresources/contributor-license-agreement">Contributor
-                            license
-                            agreement</a></li>
+                            href="{{ .Params.bugreporting }}">Report Bugs</a></li>
+                    <li class="item-165"><a href="/developersresources/contributor-license-agreement">Contributor license agreement</a></li>
                 </ul>
             </li>
             <li class="item-151 deeper parent"><a href="#">Events</a>
