Add some travel information

--- a/themes/openmodelica/layouts/partials/navbar.html
+++ b/themes/openmodelica/layouts/partials/navbar.html
@@ -68,6 +68,7 @@
                     </li>
                     <li class="item-220 deeper parent"><a href="/events/othermeetings">Other Events</a></li>
                     <li class="item-183"><a href="/events/contact">Contact</a></li>
+                    <li><a href="/events/travel-information">Travel Information</a></li>
                 </ul>
             </li>
             <li class="item-152 deeper parent"><a href="/research">Research</a>
