--- a/themes/openmodelica/layouts/index.html
+++ b/themes/openmodelica/layouts/index.html
@@ -11,7 +11,7 @@
 <h3>Latest news and events <a href="/tags/news/index.xml"><img class="rss-image" alt="rss feed" src="/images/rss.svg" /></a></h3>
 <ul id="newslist">
 {{ range first 20 (where .Site.Taxonomies.tags.news ".Params.rss_ignore" "!=" true)}}
-  <li class="newsitem">{{ .Page.Date.Format "2006-01-02" }}{{ if (isset .Params "conference_end_date") }}–{{ dateFormat "2006-01-02" .Params.conference_end_date }}{{ end }}
+  <li class="newsitem">{{ .Page.Date.Format "2006-01-02" }}{{ with .Params.conference_end_date }}–{{ dateFormat "2006-01-02" . }}{{ end }}
     {{ if (isset .Params "external_url") }}
     <a href="{{ .Page.Params.external_url }}">{{ .Page.Title }}</a>
     {{ else }}
