Removed some old information from the tools page

--- a/themes/openmodelica/static/css/openmodelica.css
+++ b/themes/openmodelica/static/css/openmodelica.css
@@ -177,6 +177,12 @@ li[role=doc-endnote] {
   clear: both;
 }
 
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
 #osdonatestatic {
     margin: auto;
     text-align: center;
