Fix link to the bug reporting page

--- a/themes/openmodelica/layouts/partials/navbar.html
+++ b/themes/openmodelica/layouts/partials/navbar.html
@@ -25,7 +25,7 @@
                     <li class="item-237"><a href="/useresresources/modelica-courses">Modelica Courses</a></li>
                     <li class="item-190"><a href="/useresresources/tools">Tools</a></li>
                     <li class="item-169"><a
-                            href="https://github.com/OpenModelica/OpenModelica/blob/master/BUGREPORTING.md">Report
+                            href="{{ .Site.Params.bugreporting }}">Report
                             Bugs</a></li>
                     <li class="item-249"><a href="/useresresources/mailing-list">Mailing List</a></li>
                     <li class="item-149"><a href="/forum">Forum</a></li>
@@ -46,7 +46,7 @@
                     </li>
                     <li class="item-195"><a href="/developersresources/courses">Developers Courses</a></li>
                     <li class="item-157"><a
-                            href="{{ .Params.bugreporting }}">Report Bugs</a></li>
+                            href="{{ .Site.Params.bugreporting }}">Report Bugs</a></li>
                     <li class="item-165"><a href="/developersresources/contributor-license-agreement">Contributor license agreement</a></li>
                 </ul>
             </li>
