--- a/themes/openmodelica/layouts/partials/head.html
+++ b/themes/openmodelica/layouts/partials/head.html
@@ -1,5 +1,6 @@
 <title>{{ .Title }}</title>
 <link rel="stylesheet" href="/css/openmodelica.css">
+<link rel="stylesheet" href="/css/syntax.css">
 <link rel="icon" type="image/x-icon" href="/images/logo-small.svg">
 {{ if .Params.qrcodejs }}
 <script src="/js/qrcode.min.js"></script>
