--- a/themes/openmodelica/layouts/partials/content.html
+++ b/themes/openmodelica/layouts/partials/content.html
@@ -1,3 +1,4 @@
+{{- partial "toc.html" . -}}
 <h1>{{ .Title }}</h1>
 {{ with .PublishDate }}
 <div class="publishDate">Published {{ .Format "2006-01-02" }}</div>
