--- a/themes/openmodelica/static/css/openmodelica.css
+++ b/themes/openmodelica/static/css/openmodelica.css
@@ -26,7 +26,6 @@ h2 {
 h3 {
     font-size: 13pt; /* default is 1.17em=14pt */
 }
-
 a:link { text-decoration: none; }
 a:visited { text-decoration: none; }
 a:hover { text-decoration: underline; }
@@ -41,26 +40,27 @@ a, a:visited {
     text-align: left;
 }
 
-nav {
+#nav-container nav {
     display: block;
     margin: auto;
 	background-color: #333333;
 }
 
-nav ul {
+#nav-container nav ul {
 	padding: 0;
     margin: 0;
 	list-style: none;
 	position: relative;
 }
 	
-nav ul li {
+#nav-container nav ul li {
 	display:inline-block;
 	background-color: #333333;
     text-align: left;
+    z-index: 100;
 }
 
-nav a {
+#nav-container nav a {
 	display:block;
 	padding:0 8pt;	
 	color:#FFF;
@@ -69,28 +69,28 @@ nav a {
 	text-decoration:none;
 }
 
-nav a:visited { 
+#nav-container nav a:visited { 
     color:#FFF;
 }
 
-nav a:hover { 
+#nav-container nav a:hover { 
 	background-color: #000000; 
 }
 
 /* Hide Dropdowns by Default */
-nav ul ul {
+#nav-container nav ul ul {
 	display: none;
 	position: absolute; 
 	top: 30pt; /* the height of the main nav */
 }
 	
 /* Display Dropdowns on Hover */
-nav ul li:hover > ul {
+#nav-container nav ul li:hover > ul {
 	display:inherit;
 }
 	
 /* First Tier Dropdown */
-nav ul ul li {
+#nav-container nav ul ul li {
 	width:280pt;
 	float:none;
 	display:list-item;
@@ -98,11 +98,41 @@ nav ul ul li {
 }
 
 /* Second, Third and more Tiers	*/
-nav ul ul ul li {
+#nav-container nav ul ul ul li {
 	position: relative;
     width:160pt;
 	top:-30pt; 
 	left:-160pt;
+}
+
+.toc-sidebar {
+}
+
+.toc-sidebar nav {
+    display: none;
+    width: 0%;
+    float: left;
+    position: absolute;
+    left: 0;
+}
+
+.toc-sidebar ul {
+    padding: 0;
+    margin: 0;
+    margin-left: 5pt;
+	list-style: none;
+    position: relative;
+    font-size: 12pt;
+}
+
+.toc-sidebar ul ul {
+    margin-left: 10pt;
+    font-size: 10pt;
+}
+
+.toc-sidebar ul ul ul {
+    margin-left: 20pt;
+    font-size: 8pt;
 }
 
 	
@@ -269,6 +299,10 @@ dd {
     }
     .space-right {
         padding-right: 15%;
+    }
+    .toc-sidebar nav {
+        display: inline;
+        width: 15%;
     }
 }
 
