Add meta viewport

--- a/themes/openmodelica/layouts/partials/head.html
+++ b/themes/openmodelica/layouts/partials/head.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/css/openmodelica.css">
 <link rel="stylesheet" href="/css/syntax.css">
 <link rel="icon" type="image/x-icon" href="/images/logo-small.svg">
-{{ if .Params.qrcodejs }}
+<meta name="viewport" content="width=device-width, initial-scale=1">{{ if .Params.qrcodejs }}
 <script src="/js/qrcode.min.js"></script>
 {{ end }}{{ with .Params.external_url }}
 <meta http-equiv="refresh" content="0; URL={{ . }}" />
