--- a/themes/openmodelica/static/css/openmodelica.css
+++ b/themes/openmodelica/static/css/openmodelica.css
@@ -11,6 +11,7 @@ body {
 	word-wrap:break-word !important;
 	font-family: 'Open Sans', sans-serif;
     margin-top: 0px;
+    font-size: 10pt;
 }
 
 h1, h2, h3, h4 {
