Add better docker instructions

--- a/themes/openmodelica/layouts/partials/navbar.html
+++ b/themes/openmodelica/layouts/partials/navbar.html
@@ -14,7 +14,8 @@
                     <li class="item-201"><a href="/download/download-windows">Windows</a></li>
                     <li class="item-202"><a href="/download/download-linux">Linux</a></li>
                     <li class="item-203"><a href="/download/download-mac">Mac</a></li>
-                    <li class="item-352"><a href="/download/virtual-machine">All OS (pre-installed VM)</a></li>
+                    <li class="item-352"><a href="/download/docker">Docker (All OS)</a></li>
+                    <li class="item-352"><a href="/download/virtual-machine">Virtual Machine (All OS)</a></li>
                     <li class="item-241"><a href="/download/nightlybuildsdownload">Nightly Builds</a></li>
                     <li class="item-242"><a href="/download/sourcecodeuser">Source Code</a></li>
                 </ul>
