Adding the links to check status of nightly builds (#20)
* Adding the links to check status of nightly builds

* Remove duplicate information and update the menus

* Open external link in new tab/window

* Fix the navbar link location

--- a/themes/openmodelica/layouts/partials/navbar.html
+++ b/themes/openmodelica/layouts/partials/navbar.html
@@ -17,7 +17,6 @@
                     <li class="item-352"><a href="/download/docker">Docker (All OS)</a></li>
                     <li class="item-352"><a href="/download/virtual-machine">Virtual Machine (All OS)</a></li>
                     <li class="item-241"><a href="/download/nightlybuildsdownload">Nightly Builds</a></li>
-                    <li class="item-242"><a href="/download/sourcecodeuser">Source Code</a></li>
                 </ul>
             </li>
             <li class="item-236 deeper parent"><a href="#">Users</a>
@@ -25,9 +24,7 @@
                     <li class="item-153"><a href="/useresresources/userdocumentation">User Documentation</a></li>
                     <li class="item-237"><a href="/useresresources/modelica-courses">Modelica Courses</a></li>
                     <li class="item-190"><a href="/useresresources/tools">Tools</a></li>
-                    <li class="item-169"><a
-                            href="{{ .Site.Params.bugreporting }}">Report
-                            Bugs</a></li>
+                    <li class="item-169"><a href="{{ .Site.Params.bugreporting }}" target="_blank">Report Bugs</a></li>
                     <li class="item-249"><a href="/useresresources/mailing-list">Mailing List</a></li>
                     <li class="item-149"><a href="/forum">Forum</a></li>
                     <li class="item-161"><a href="/useresresources/license">License</a></li>
@@ -41,13 +38,11 @@
             </li>
             <li class="item-239 deeper parent"><a href="#">Developers</a>
                 <ul class="nav-child unstyled small">
-                    <li class="item-240"><a href="/developersresources/source-code">Source Code</a></li>
-                    <li class="item-205"><a href="/developersresources/nightly-builds">Nightly Builds</a></li>
+                    <li class="item-240"><a href="/developersresources/sourcecode">Source Code</a></li>
+                    <li class="item-157"><a href="{{ .Site.Params.bugreporting }}" target="_blank">Report Bugs</a></li>
                     <li class="item-163"><a href="/developersresources/devdocumentation">Developer Documentation</a>
                     </li>
                     <li class="item-195"><a href="/developersresources/courses">Developers Courses</a></li>
-                    <li class="item-157"><a
-                            href="{{ .Site.Params.bugreporting }}">Report Bugs</a></li>
                     <li class="item-165"><a href="/developersresources/contributor-license-agreement">Contributor license agreement</a></li>
                 </ul>
             </li>
